@@ -2,6 +2,8 @@ Revision history for {{$dist->name}}
 
 {{$NEXT}}
 
+        Skip 'git log --oneline' test on older gits without support for that option
+
 0.018     2012-04-22 15:30:43 America/New_York
 
         Misc doc clean ups and tweaks (John SJ Anderson)
